--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -11,35 +11,40 @@ set(
 
 add_executable(
   ${PROJECT_NAME}
-  main.cpp
+  ${GLAD_DIR}/src/glad.c
   ${IMGUI_SRC}
+  main.cpp
   )
 
 target_include_directories(
   ${PROJECT_NAME}
   PRIVATE
+  ${GLAD_DIR}/include/
   ${glfw_SOURCE_DIR}/include/
   ${IMGUI_DIR}
   ${IMGUI_DIR}/backends/
   ${luajit_BINARY_DIR}
   )
 
+target_link_libraries(
+  ${PROJECT_NAME}
+  PRIVATE
+  OpenGL::GL
+  glfw
+  )
+
 if(APPLE)
   target_link_libraries(
     ${PROJECT_NAME}
     PRIVATE
-    glfw
     -Wl,-export_dynamic
     luajit::lib
     luajit::header
-    "-framework OpenGL"
     )
 elseif(UNIX)
   target_link_libraries(
     ${PROJECT_NAME}
     PRIVATE
-    ${OPENGL_gl_LIBRARY}
-    glfw
     -Wl,-E
     luajit::lib
     luajit::header
@@ -48,9 +53,19 @@ else()
   target_link_libraries(
     ${PROJECT_NAME}
     PRIVATE
-    ${OPENGL_gl_LIBRARY}
-    glfw
     luajit::lib
     luajit::header
     )
 endif()
+
+if(MSVC)
+  add_custom_command(
+    TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+        "$<TARGET_PROPERTY:glfw,BINARY_DIR>/$<CONFIG>"
+        "$<TARGET_PROPERTY:${PROJECT_NAME},BINARY_DIR>/$<CONFIG>"
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+        "$<TARGET_PROPERTY:libluajit,BINARY_DIR>/$<CONFIG>"
+        "$<TARGET_PROPERTY:${PROJECT_NAME},BINARY_DIR>/$<CONFIG>"
+    )
+endif(MSVC)
