--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,28 +1,43 @@
-set(
-  IMGUI_SRC
-  ${IMGUI_DIR}/imgui.cpp
-  ${IMGUI_DIR}/imgui_demo.cpp
-  ${IMGUI_DIR}/imgui_draw.cpp
-  ${IMGUI_DIR}/imgui_tables.cpp
-  ${IMGUI_DIR}/imgui_widgets.cpp
-  ${IMGUI_DIR}/backends/imgui_impl_glfw.cpp
-  ${IMGUI_DIR}/backends/imgui_impl_opengl3.cpp
-  )
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/app LVIZ_SRC_APP)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/ui LVIZ_SRC_UI)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/view LVIZ_SRC_VIEW)
 
-add_executable(
-  ${PROJECT_NAME}
+set(
+  LVIZ_SRC
   ${GLAD_DIR}/src/glad.c
-  ${IMGUI_SRC}
+  ${LVIZ_SRC_APP}
+  ${LVIZ_SRC_UI}
+  ${LVIZ_SRC_VIEW}
   main.cpp
   )
+
+if (APPLE)
+  add_executable(
+    ${PROJECT_NAME}
+    MACOSX_BUNDLE
+    ${LVIZ_SRC}
+    )
+
+  set_target_properties(
+    ${PROJECT_NAME}
+    PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/Info.plist
+    )
+else()
+  add_executable(
+    ${PROJECT_NAME}
+    WIN32
+    ${LVIZ_SRC}
+    lviz.exe.manifest
+    )
+endif()
+
+include(${wxWidgets_USE_FILE})
 
 target_include_directories(
   ${PROJECT_NAME}
   PRIVATE
   ${GLAD_DIR}/include/
-  ${glfw_SOURCE_DIR}/include/
-  ${IMGUI_DIR}
-  ${IMGUI_DIR}/backends/
+  ${glm_SOURCE_DIR}
   ${luajit_BINARY_DIR}
   )
 
@@ -30,7 +45,7 @@ target_link_libraries(
   ${PROJECT_NAME}
   PRIVATE
   OpenGL::GL
-  glfw
+  ${wxWidgets_LIBRARIES}
   )
 
 if(APPLE)
@@ -62,10 +77,7 @@ if(MSVC)
   add_custom_command(
     TARGET ${PROJECT_NAME} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
-        "$<TARGET_PROPERTY:glfw,BINARY_DIR>/$<CONFIG>"
-        "$<TARGET_PROPERTY:${PROJECT_NAME},BINARY_DIR>/$<CONFIG>"
-    COMMAND ${CMAKE_COMMAND} -E copy_directory
-        "$<TARGET_PROPERTY:libluajit,BINARY_DIR>/$<CONFIG>"
-        "$<TARGET_PROPERTY:${PROJECT_NAME},BINARY_DIR>/$<CONFIG>"
+        "$<TARGET_PROPERTY:libluajit,BINARY_DIR>/$<$<BOOL:${CMAKE_CONFIGURATION_TYPES}>:$<CONFIG>>"
+        "$<TARGET_PROPERTY:${PROJECT_NAME},BINARY_DIR>/$<$<BOOL:${CMAKE_CONFIGURATION_TYPES}>:$<CONFIG>>"
     )
 endif(MSVC)
