fix: build on windows

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -62,10 +62,10 @@ if(MSVC)
   add_custom_command(
     TARGET ${PROJECT_NAME} POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
-        "$<TARGET_PROPERTY:glfw,BINARY_DIR>/$<CONFIG>"
-        "$<TARGET_PROPERTY:${PROJECT_NAME},BINARY_DIR>/$<CONFIG>"
+        "$<TARGET_PROPERTY:glfw,BINARY_DIR>/$<$<BOOL:${CMAKE_CONFIGURATION_TYPES}>:$<CONFIG>>"
+        "$<TARGET_PROPERTY:${PROJECT_NAME},BINARY_DIR>/$<$<BOOL:${CMAKE_CONFIGURATION_TYPES}>:$<CONFIG>>"
     COMMAND ${CMAKE_COMMAND} -E copy_directory
-        "$<TARGET_PROPERTY:libluajit,BINARY_DIR>/$<CONFIG>"
-        "$<TARGET_PROPERTY:${PROJECT_NAME},BINARY_DIR>/$<CONFIG>"
+        "$<TARGET_PROPERTY:libluajit,BINARY_DIR>/$<$<BOOL:${CMAKE_CONFIGURATION_TYPES}>:$<CONFIG>>"
+        "$<TARGET_PROPERTY:${PROJECT_NAME},BINARY_DIR>/$<$<BOOL:${CMAKE_CONFIGURATION_TYPES}>:$<CONFIG>>"
     )
 endif(MSVC)
