--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,6 @@ insert_final_newline = true
 [Makefile]
 indent_style = tab
 
-[*.{c,cpp,cxx,h,hpp,hxx,natvis}]
+[*.{c,cpp,cxx,h,hpp,hxx,natvis,lua}]
 indent_style = space
 indent_size = 2
