--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ set(
   )
 
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/appl LVIZ_APPL_SRC)
+aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/bind LVIZ_BIND_SRC)
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/canvas LVIZ_CANVAS_SRC)
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/render LVIZ_RENDER_SRC)
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/ui LVIZ_UI_SRC)
@@ -20,6 +21,7 @@ set(
   ${GLAD_DIR}/src/glad.c
   ${IMGUI_SRC}
   ${LVIZ_APPL_SRC}
+  ${LVIZ_BIND_SRC}
   ${LVIZ_CANVAS_SRC}
   ${LVIZ_RENDER_SRC}
   ${LVIZ_UI_SRC}
